<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_extend_date"
        android:title="@string/extenddate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_support"
        android:title="@string/support"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>