<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <include layout="@layout/view_header" />
    
    <ScrollView style="@style/View.MatchParent"
        android:background="@drawable/bg_images">

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="20dp" >
	        
	        <TextView
	            style="@style/View.MatchParent.Width"
	            android:layout_marginTop="8dp"
	            android:text="@string/register_instruction"
	            android:textColor="@color/white" />
    
		    <com.lhn.watchandlearn.ui.widget.FormEditText
                 android:id="@+id/tvEmail"
                 style="@style/View.MatchParent.Width"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/bg_edit_text"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:nextFocusDown="@+id/tvFirstname"
                 fs:hint="@string/email"
                 fs:required="true"
                 fs:textColor="@color/edit_text_color"
                 fs:textSize="15sp" />

		    <com.lhn.watchandlearn.ui.widget.FormEditText
			    android:id="@+id/tvPassword"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/bg_edit_text"
			    android:imeOptions="actionNext"
			    android:inputType="textPassword"
			    fs:hint="@string/password"
			    fs:required="true"
			    fs:textColor="@color/edit_text_color"
			    fs:textSize="15sp" />
			
			<com.lhn.watchandlearn.ui.widget.FormEditText
			    android:id="@+id/tvRetypePassword"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/bg_edit_text"
			    android:imeOptions="actionNext"
			    android:inputType="textPassword"
			    fs:hint="@string/retype_password"
			    fs:required="true"
			    fs:textColor="@color/edit_text_color"
			    fs:textSize="15sp" />
			
			<com.lhn.watchandlearn.ui.widget.FormEditText
			    android:id="@+id/tvPhone"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/bg_edit_text"
			    android:imeOptions="actionNext"
			    android:inputType="phone"
			    fs:hint="@string/phone"
			    fs:required="true"
			    fs:textColor="@color/edit_text_color"
			    fs:textSize="15sp" />
			
			<Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_btn_main" />
		</LinearLayout>
   	</ScrollView>    
</LinearLayout>    