<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_header" />
    
    <ScrollView style="@style/View.MatchParent"
        android:background="@drawable/bg_images">

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="20dp" >
	        
	        <TextView
                    style="@style/View.MatchParent.Width"
                    android:text="@string/forgot_password_instruction"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"/>
    
		    <com.lhn.watchandlearn.ui.widget.FormEditText
                 android:id="@+id/tvEmail"
                 style="@style/View.MatchParent.Width"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/bg_edit_text"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:nextFocusDown="@+id/tvFirstname"
                 fs:hint="@string/email"
                 fs:required="true"
                 fs:textColor="@color/edit_text_color"
                 fs:textSize="15sp" />
		    
		    <com.lhn.watchandlearn.ui.widget.FormEditText
			    android:id="@+id/tvPhone"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/bg_edit_text"
			    android:imeOptions="actionNext"
			    android:inputType="phone"
			    fs:hint="@string/phone"
			    fs:required="true"
			    fs:textColor="@color/edit_text_color"
			    fs:textSize="15sp" />
			
			<Button
			    android:id="@+id/btnSubmit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="end"
			    android:layout_marginTop="15dp"
			    android:background="@drawable/bg_btn_main"
			    android:gravity="center_vertical"
			    android:paddingLeft="20dp"
			    android:paddingRight="20dp"
			    android:text="@string/support_submit"
			    android:textAllCaps="true"
			    android:textColor="@color/white"
			    android:textStyle="bold" />

		</LinearLayout>
   	</ScrollView>    
</LinearLayout>    